Added HTTPS petition probe
ADD: Probe to test HTTPS petition
It sends an HTTPS petition to the remote host using the specified
port.
As the HTTP probe, it can follow redirections, get the complete page
or only the header, and now check if the SSL certificate is valid.

--- a/lib/probes/http/views/_probe_form.html.erb
+++ b/lib/probes/http/views/_probe_form.html.erb
@@ -20,7 +20,7 @@
 <div class="form-group<% if (!errors.blank?) %> has-error<% end %>">
   <label for="service_probe_config_follow_redirect" class="col-sm-2 control-label"><%= t("probes.http.form.follow_redirect") %></label>
   <div class="col-md-7 col-sm-10">
-    <%= select_tag "probe_config[follow_redirect]", options_for_select({t("probes.http.form.follow_redirect_0") => 0, t("probes.http.form.follow_redirect_1") => 1}, config[:follow_redirect]), :class => "form-control", :required => true %>
+    <%= select_tag "probe_config[follow_redirect]", options_for_select({t("probes.http.form.follow_redirect_0") => 0, t("probes.http.form.follow_redirect_1") => 1}, (config[:follow_redirect] || 1)), :class => "form-control", :required => true %>
   </div>
 </div>
 <div class="form-group<% if (!errors.blank?) %> has-error<% end %>">
