Added monitoring sidebar, sidekiq view and highcharts gem.
ADD: Monitoring sidebar
Used to navigate between results, alert history and sidekiq control
panel.

ADD: Sidekiq control panel view
Used to view the sidekiq control panel inside the application.

ADD: Highcharts gem
It'll be used to show live charts in results views.

--- a/app/views/application/_configuration_sidebar.html.erb
+++ b/app/views/application/_configuration_sidebar.html.erb
@@ -1,9 +1,9 @@
 <div class="panel panel-default">
   <div class="panel-body">
     <ul class="nav nav-pills nav-stacked">
-      <li class="<% if (controller_name == "services") %>active<% end %>"><%= link_to t("monitoring.sidebar.services"), services_path() %></li>
-      <li class="<% if (controller_name == "hosts") %>active<% end %>"><%= link_to t("monitoring.sidebar.hosts"), hosts_path() %></li>
-      <li class="<% if (controller_name == "alerts") %>active<% end %>"><%= link_to t("monitoring.sidebar.alerts"), alerts_path() %></li>
+      <li class="<% if (controller_name == "services") %>active<% end %>"><%= link_to t("configuration.sidebar.services"), services_path() %></li>
+      <li class="<% if (controller_name == "hosts") %>active<% end %>"><%= link_to t("configuration.sidebar.hosts"), hosts_path() %></li>
+      <li class="<% if (controller_name == "alerts") %>active<% end %>"><%= link_to t("configuration.sidebar.alerts"), alerts_path() %></li>
     </ul>
   </div>
 </div>
