--- a/app/assets/stylesheets/ui/sidebar.sass
+++ b/app/assets/stylesheets/ui/sidebar.sass
@@ -5,6 +5,12 @@ div.sidebar
   @extend .col-md-3
   @extend .col-sm-4
 
+  // div.panel
+  //   @extend .panel-primary
+
+  //   hr.divider
+  //     @extend .panel-primary
+
   ul.nav.nav-pills.nav-stacked
     li.disabled
       a
