--- a/app/views/monitoring/_sidebar.html.erb
+++ b/app/views/monitoring/_sidebar.html.erb
@@ -3,7 +3,7 @@
     <ul class="nav nav-pills nav-stacked">
       <li class="<% if (action_name == "index") %>active<% end %>"><%= link_to t("monitoring.sidebar.overall_results"), root_path() %></li>
       <hr class='divider' />
-      <li class=""><%= link_to t("monitoring.sidebar.service_results"), root_path() %></li>
+      <li class="<% if (action_name == "service") %>active<% end %>"><%= link_to t("monitoring.sidebar.service_results"), service_monitoring_path() %></li>
       <li class=""><%= link_to t("monitoring.sidebar.host_results"), root_path() %></li>
       <hr class='divider' />
       <li class=""><%= link_to t("monitoring.sidebar.alert_history"), root_path() %></li>
