--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -45,5 +45,15 @@ img.with-border
     width: 100%
 
   .panel
-    position:relative
+    position: relative
     display: block
+
+  .no-results
+    margin: 0 auto
+    padding-top: 20px
+    padding-bottom: 20px
+
+    text-align: center
+    font-weight: lighter
+    font-size: 2em
+    color: #aaa
