Fixed some bugs and started to implement chat functionality.

--- a/app/views/monitoring/index.html.erb
+++ b/app/views/monitoring/index.html.erb
@@ -64,7 +64,7 @@
       </div>
       <% if @services.length == 0 %>
         <div class="no-results">
-          <%= raw t("ui.table.no_element") %>
+          <%= raw t("monitoring.index.no_element") %>
         </div>
       <% end %>
       <hr class='divider' />
