Modified template to fit new structure
MODIFY: Template
Now the navbar has more direct links, and the hosts, services and
alerts are independent.

ADD: Monitoring overview on index
Also, the monitoring overview is now on the index panel, because
theere is where we are going to show the general results, alerts
opened, etc.

MODIFY: Changed sidekiq panel url
Changed to revome the /configuration scope.

DELETE: Configuration sidebar and sctructure
Deleted in order to make the different parts independent.

MODIFY: Independent SASS file for fluid-columns

--- a/app/views/hosts/_sidebar.html.erb
+++ b/app/views/hosts/_sidebar.html.erb
@@ -1,15 +1,12 @@
-<%= render :partial => "configuration_sidebar" %>
-<% if (action_name == "index") %>
 <div class="panel panel-default">
   <div class="panel-body">
     <ul class="nav nav-pills nav-stacked">
-      <li<% if (@type.blank?) %> class="active"<% end %>><%= link_to t("hosts.sidebar.all"), hosts_path() %></li>
+      <li<% if ((@type.blank?) && (action_name == "index")) %> class="active"<% end %>><%= link_to t("hosts.sidebar.all"), hosts_path() %></li>
       <hr class='divider' />
       <li class='disabled'><a><%= t("hosts.sidebar.view_by_type")%></a></li>
       <% Host::AVAILABLE_TYPES.each do |htype| %>
-      <li<% if (@type == htype) %> class="active"<% end %>><%= link_to t("hosts.sidebar.#{htype.to_s}"), hosts_path(:type => htype) %></li>
+      <li<% if ((@type == htype) && (action_name == "index")) %> class="active"<% end %>><%= link_to t("hosts.sidebar.#{htype.to_s}"), hosts_path(:type => htype) %></li>
       <% end %>
     </ul>
   </div>
 </div>
-<% end %>
