--- a/app/assets/stylesheets/ui/sidebar.sass
+++ b/app/assets/stylesheets/ui/sidebar.sass
@@ -20,6 +20,16 @@ div.content
   @extend .col-lg-10
   @extend .col-md-9
   @extend .col-sm-8
+
+  div.page-header
+    margin-top: 0px
+
+    h1
+      margin-top: 0px
+
+div.content-index
+  @extend .col-md-8
+
   div.page-header
     margin-top: 0px
 
