--- a/app/views/panel/sidekiq.html.erb
+++ b/app/views/panel/sidekiq.html.erb
@@ -1,1 +1,2 @@
+<% content_for :title, t("panel.sidekiq.title") %>
 <object class='embedded_page' type="text/html" data="<%= sidekiq_web_path() %>" width="100%" height="100%"></object>
