Restored some misdeleted code.

--- a/app/views/services/results.html.erb
+++ b/app/views/services/results.html.erb
@@ -30,7 +30,7 @@
 
         <script>
           $( document ).ready(function() {
-            monitoringChartStart({
+            chartStart({
               container: "chart-container", 
               name: "<%= @service.name %>", 
               interval: <%= @service.interval %>, 
