Added JS chart code
ADD: Javascript chart code
Added in order to paint the full results stored, and receive new
results, removing the old ones when necessary.

--- a/app/views/services/results.html.erb
+++ b/app/views/services/results.html.erb
@@ -30,13 +30,17 @@
 
         <script>
           $( document ).ready(function() {
-            chartStart({
+            var chart_config = {
               container: "chart-container", 
               name: "<%= @service.name %>", 
-              interval: <%= @service.interval %>, 
+              interval: <%= @service.interval %>,
+              clean_interval: <%= @service.clean_interval %>,
               resume: "<%= @service.resume.to_s %>",
-              data_url: "<%= data_service_monitoring_path(@service.id) %>"
-            });
+              data_url: "<%= data_results_service_path(@service.id) %>"
+            };
+
+            chartStart(chart_config);
+            chartLive();
           });
         </script>
       <% end %>
